<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/list_unit"
    tools:context="app.com.example.android.smartstudykanji.SelectUnitN3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/N3_unit1"
            android:textColor="#000000"
            style="@style/CategoryStyle"
            android:text="@string/unit1"
            />

        <TextView
            android:id="@+id/N3_unit2"
            android:textColor="#000000"
            style="@style/CategoryStyle"
            android:text="@string/unit2" />

        <TextView
            android:id="@+id/N3_unit3"
            android:textColor="#000000"
            style="@style/CategoryStyle"
            android:text="@string/unit3" />

        <TextView
            android:id="@+id/N3_unit4"
            android:textColor="#000000"
            style="@style/CategoryStyle"
            android:text="@string/unit4" />

        <TextView
            android:id="@+id/N3_unit5"
            android:textColor="#000000"
            style="@style/CategoryStyle"
            android:text="@string/unit5" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_account_circle_white_48dp"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|right"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="displayMenu"
            app:backgroundTint="@color/floatingButton" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fab"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/floatingButton"
                android:padding="4dp"
                android:text="@string/display_progress"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/floatingButton"
                android:padding="4dp"
                android:text="@string/feed_back_hint"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/aboutus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/floatingButton"
                android:padding="4dp"
                android:text="@string/title_activity_about_us"
                android:clickable="true"
                android:visibility="invisible"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>