<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        tools:context="app.com.example.android.smartstudykanji.SelectLevelActivity">

        <TextView
            android:id="@+id/category_N3"
            style="@style/CategoryStyle"
            android:background="@color/category_N3"
            android:text="@string/category_N3"
            android:layout_margin="8dp"
            />

        <TextView
            android:id="@+id/category_N4"
            style="@style/CategoryStyle"
            android:background="@color/category_N4"
            android:text="@string/category_N4"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/category_N5"
            style="@style/CategoryStyle"
            android:background="@color/category_N5"
            android:text="@string/category_N5"
            android:layout_margin="8dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_account_circle_white_48dp"
                android:layout_margin="16dp"
                app:layout_anchorGravity="bottom|right"
                android:layout_gravity="bottom|right"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="displayMenu"
                app:backgroundTint="@color/floatingButton" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/fab"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/floatingButton"
                    android:padding="4dp"
                    android:text="@string/display_progress"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/floatingButton"
                    android:padding="4dp"
                    android:text="@string/feed_back_hint"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/aboutus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/floatingButton"
                    android:padding="4dp"
                    android:text="@string/title_activity_about_us"
                    android:clickable="true"
                    android:visibility="invisible"/>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>