<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.example.android.smartstudykanji.DisplayActivity">

    <TextView
        android:id="@+id/kanji_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:textColor="#000000"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:text="" />

    <TextView
        android:id="@+id/kanji_details_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_below="@id/kanji_text_view"
        android:layout_weight="2"
        android:text="" />

    <LinearLayout
        android:id="@+id/check_known_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:layout_below="@+id/kanji_details_text_view"
        android:orientation="horizontal"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/check_known1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:textSize="36sp"
            />

        <CheckBox
            android:id="@+id/check_known2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:textSize="36sp"
            />

        <CheckBox
            android:id="@+id/check_known3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:textSize="36sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/check_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_known_boxes"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:textSize="84sp"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/known_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:text="@string/known"
            android:onClick="onEventKnown"/>

        <Button
            android:id="@+id/unknown_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:text="@string/unknown"
            android:onClick="onEventUnknown"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/next"
            android:onClick="onEventNext"/>

        <Button
            android:id="@+id/check_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/check"
            android:onClick="onEventCheck"/>

    </LinearLayout>



</RelativeLayout>
